Add POST `/v2/verify/etherscan/{chainId}/{address}` endpoint (#2090)
* Move apiv1/verification/etherscan/etherscan.commmon.ts to services/utils/etherscan-utils.ts

* Move etherscan.spec.ts to apiv1/verification-handlers tests folder

* Refactor `etherscan-utils.ts` and add API v2 errors

* Add unit tests for etherscan-util.ts

* Fix file name

* Parse Etherscan sources to find the correct contract path

Etherscan does not provide the contractPath of the target contract when fetching its source code. Before we were recompiling to get the contract path. This improves performance by making the compilation step obsolete.

* Add POST /v2/verify/etherscan/:chainId/:address endpoint

* Set logLevel to debug on ServerFixture

* Add integration tests for POST /v2/verify/etherscan/

* Refactor other API v2 tests to use common functions

* Downgrade chai-as-promised

Version 8 only works as esmodule but our server is not set up for that

* Process Etherscan result inside worker

I decided to move the processing step into the worker because parsing can be computationally expensive. Fetching from Etherscan can still be done easily inside the server main thread which provides better UX.

* Add new tags and endpoints for contract verification in OpenAPI specification

* Fix etherscan verification integration tests for validation

* Update API v2 spec

* Update etherscan-instance.spec.ts to use API v2

* Rename verifyAndAssertEtherscan function to verifyAndAssertEtherscanViaApiV1
