# services/server/src/server/apiv2/verification/verification.handlers.ts
@@ -9,6 +9,8 @@ import logger from "../../../common/logger";
 import { Request } from "express";
 import { Services } from "../../services/services";
 import { StatusCodes } from "http-status-codes";
+import { fetchFromEtherscan } from "../../services/utils/etherscan-util";
+import { ChainRepository } from "../../../sourcify-chain-repository";
 
 interface VerifyFromJsonInputRequest extends Request {
   params: {
@@ -23,13 +25,13 @@ interface VerifyFromJsonInputRequest extends Request {
   };
 }
 
-type VerifyFromJsonInputResponse = TypedResponse<{
+type VerifyResponse = TypedResponse<{
   verificationId: string;
 }>;
 
 export async function verifyFromJsonInputEndpoint(
   req: VerifyFromJsonInputRequest,
-  res: VerifyFromJsonInputResponse,
+  res: VerifyResponse,
 ) {
   logger.debug("verifyFromJsonInputEndpoint", {
     chainId: req.params.chainId,
@@ -77,13 +79,9 @@ interface VerifyFromMetadataRequest extends Request {
   };
 }
 
-type VerifyFromMetadataResponse = TypedResponse<{
-  verificationId: string;
-}>;
-
 export async function verifyFromMetadataEndpoint(
   req: VerifyFromMetadataRequest,
-  res: VerifyFromMetadataResponse,
+  res: VerifyResponse,
 ) {
   logger.debug("verifyFromMetadataEndpoint", {
     chainId: req.params.chainId,
@@ -102,6 +100,48 @@ export async function verifyFromMetadataEndpoint(
       req.body.metadata,
       req.body.sources,
       req.body.creationTransactionHash,
+    );
+
+  res.status(StatusCodes.ACCEPTED).json({ verificationId });
+}
+
+interface VerifyFromEtherscanRequest extends Request {
+  params: {
+    chainId: string;
+    address: string;
+  };
+  body: {
+    apiKey?: string;
+  };
+}
+
+export async function verifyFromEtherscanEndpoint(
+  req: VerifyFromEtherscanRequest,
+  res: VerifyResponse,
+) {
+  logger.debug("verifyFromEtherscanEndpoint", {
+    chainId: req.params.chainId,
+    address: req.params.address,
+  });
+
+  const services = req.app.get("services") as Services;
+  const chainRepository = req.app.get("chainRepository") as ChainRepository;
+
+  // Fetch here to give early feedback to the user.
+  // Then, process in worker.
+  const etherscanResult = await fetchFromEtherscan(
+    chainRepository.supportedChainMap[req.params.chainId],
+    req.params.address,
+    req.body?.apiKey,
+    true,
+  );
+
+  const verificationId =
+    await services.verification.verifyFromEtherscanViaWorker(
+      req.baseUrl + req.path,
+      req.params.chainId,
+      req.params.address,
+      etherscanResult,
     );
 
   res.status(StatusCodes.ACCEPTED).json({ verificationId });
